[tool.poetry]
name = "farkle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
gymnasium = "^0.29.1"
torch = "^2.4.1"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
